# vagabond

./: .gitignore  .gitmodules  .vimrc  Doxyfile  Makefile  Makefile.am  Makefile.in  README.md  _ica.pc  _vag.pc  config.status  configure  configure.ac  configure.scan  get_hash.sh  libtool  main.cpp  meson.build  rubbish  stdin.info  test  tmp
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
c4xsrc/: .vimrc  =  Arbitrary.cpp  Arbitrary.h  AutoCluster.cpp  AutoCluster.h  AveCAlpha.cpp  AveCAlpha.h  AveCSV.cpp  AveCSV.h  AveDiffraction.cpp  AveDiffraction.h  AveUnitCell.cpp  AveUnitCell.h  AveVectors.cpp  AveVectors.h  Average.cpp  Average.h  Averager.cpp  Averager.h  AxisScroll.cpp  AxisScroll.h  CAlphaView.cpp  CAlphaView.h  ClusterList.cpp  ClusterList.h  ClusterListCrystFEL.cpp  ClusterListNoCrystFEL.cpp  ClusterListNoSQL.cpp  ClusterListSQL.cpp  ClusterPlot.cpp  ClusterPlot.h  ColumnChooser.cpp  ColumnChooser.h  ColumnView.cpp  ColumnView.h  CorrelLabel.cpp  CorrelLabel.h  CrystFELInput.cpp  CrystFELInput.h  (+65 more)
c4xsrc/shaders/: Blob_fsh.h  Blob_vsh.h  HKL_fsh.h  HKL_vsh.h  fImage.h  fWipe.h  vImage.h
doc/: benchmark.md  install.md  limits.md  mainpage.md  pdbs.md
force_down/: Wilson.cpp  Wilson.h  main.cpp
install-scripts/: install_script.sh  meson.build
install-scripts/res/: HelloQt.icns  Info.plist
libccp4/: Makefile  Makefile.am  Makefile.in  csymlib.c
libccp4/.deps/: ccp4_array.Plo  ccp4_general.Plo  ccp4_parser.Plo  ccp4_program.Plo  ccp4_unitcell.Plo  cmap_accessor.Plo  cmap_close.Plo  cmap_data.Plo  cmap_header.Plo  cmap_labels.Plo  cmap_open.Plo  cmap_skew.Plo  cmap_stats.Plo  cmap_symop.Plo  cmtzlib.Plo  csymlib.Plo  cvecmat.Plo  library_err.Plo  library_file.Plo  library_utils.Plo  pack_c.Plo
libfftw/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  libtool
libfftw/api/: Makefile  Makefile.in
libfftw/api/.deps/: apiplan.Plo  configure.Plo  execute-dft.Plo  (+63 more)
libfftw/autom4te.cache/: output.0  requests  traces.0  traces.1
libfftw/dft/: Makefile  Makefile.in
libfftw/doc/: Makefile  Makefile.in  fftw3.info  fftw3.info-1  fftw3.info-2
libfftw/genfft/: Makefile  Makefile.in
libfftw/kernel/: Makefile  Makefile.in
libfftw/libbench2/: Makefile  Makefile.in
libfftw/m4/: Makefile  Makefile.in
libfftw/mpi/: Makefile  Makefile.in
libfftw/rdft/: Makefile  Makefile.in
libfftw/reodft/: Makefile  Makefile.in
libfftw/simd-support/: Makefile  Makefile.in
libfftw/support/: Makefile  Makefile.in
libfftw/tests/: Makefile  Makefile.in  bench
libfftw/threads/: Makefile  Makefile.in
libfftw/tools/: Makefile  Makefile.in  fftw-wisdom  fftwf-wisdom
libfftw_old/: config.h  fftw3.pc  fftw3f.pc
libfftw_old/genfft/: Makefile
libfftw_old/m4/: Makefile
libfftw_old/tools/: fftwf-wisdom
libgui/: Arrow.h  Atoms2GL.cpp  Atoms2GL.h  Blob.h  BlobMesh.cpp  BlobMesh.h  Bonds2GL.cpp  Bonds2GL.h  Connect2GL.cpp  Connect2GL.h  Cross.h  Density2GL.cpp  Density2GL.h  Dotted.h  Frameworks.h  GLKeeper.cpp  GLKeeper.h  GLObject.cpp  GLObject.h  Multi2GL.cpp  Multi2GL.h  Pencil.h  Pic2Header.h  Picture.h  Selected.h  Selected2GL.cpp  Selected2GL.h  Vagabond2GL.cpp  Vagabond2GL.h  WarpGL.cpp  WarpGL.h  shader.cpp  shader.h
libgui/Shaders/: Blob_fsh.h  Blob_vsh.h  InkBond_fsh.h  InkBond_vsh.h  Pencil_fsh.h  Pencil_vsh.h  PointyTriangle_vsh.h  Shader.fsh  Shader.vsh  Shader_fsh.h  Shader_vsh.h  SlimBond_fsh.h  SlimBond_vsh.h
libgui/macgui/: AppDelegate.h  AppDelegate.m  Frameworks.h  OpenGLView.h  OpenGLView.mm  OptionSpawner.h  OptionSpawner.mm  main.mm
libgui/qtgui/: AtomListItem.h  ChainMenuAction.h  CrystalExplorer.cpp  CrystalExplorer.h  Dialogue.cpp  Dialogue.h  DropDown.cpp  DropDown.h  ErroneousZone.cpp  ErroneousZone.h  InstructionThread.cpp  InstructionThread.h  MoleListItem.h  MoleculeExplorer.cpp  MoleculeExplorer.h  MonomerExplorer.cpp  MonomerExplorer.h  ResButton.cpp  ResButton.h  SequenceView.cpp  SequenceView.h  SetterEdit.cpp  SetterEdit.h  StartScreen.cpp  StartScreen.h  VagWindow.cpp  VagWindow.h  VagabondGLWidget.cpp  VagabondGLWidget.h  gui_main.cpp  moc_Dialogue.cpp  moc_MoleculeExplorer.cpp  moc_MonomerExplorer.cpp  moc_ResButton.cpp  moc_SequenceView.cpp  moc_SetterEdit.cpp  moc_VagWindow.cpp  moc_predefs.h  vagabond-gui.pro
libica/: Makefile  Makefile.am  Makefile.in  svdcmp.cpp  svdcmp.h
libica/.deps/: matrix.Plo  svdcmp.Plo
libinfo/: CentroidToPhase.h  GeomTable.cpp  GeomTable.h  GeomVariant.cpp  GeomVariant.h  GeomVariantDefs.h  Makefile  Makefile.am  Makefile.in  RotamerTable.cpp  RotamerTable.h  ScatterFactors.cpp  ScatterFactors.h
libinfo/.deps/: GeomTable.Plo  RotamerTable.Plo
libs/.libs/: libccp4c.so.0.0.0  libica.so.0  libica.so.0.0.0  libvbondinfo.so.0  libvbondinfo.so.0.0.0
libsrc/:  . x  Absolute.cpp  Absolute.h  Anchor.cpp  Anchor.h  Angler.cpp  Angler.h  Anisotropicator.cpp  Anisotropicator.h  Any.h  Atom.cpp  Atom.h  AtomGroup.cpp  AtomGroup.h  Backbone.cpp  Backbone.h  Balance.cpp  Balance.h  BaseParser.cpp  BaseParser.h  Blob.cpp  Blob.h  Bond.cpp  Bond.h  BondGroup.cpp  BondGroup.h  BoneDensity.cpp  BoneDensity.h  Bucket.cpp  Bucket.h  BucketBulkSolvent.cpp  BucketBulkSolvent.h  BucketFeatures.cpp  BucketFeatures.h  BucketMonteCarlo.cpp  BucketMonteCarlo.h  BucketPerStrand.cpp  BucketPerStrand.h  BucketUniform.cpp  BucketUniform.h  (+209 more)
libsrc/.deps/: Absolute.Po  Anchor.Po  Anisotropicator.Po  Atom.Po  AtomGroup.Po  Backbone.Po  Bond.Po  Bucket.Po  BucketUniform.Po  CSV.Po  Crystal.Po  Diffraction.Po  DiffractionMTZ.Po  Distributor.Po  Element.Po  FileReader.Po  Kabsch.Po  Knotter.Po  LocalCC.Po  Model.Po  Molecule.Po  Monomer.Po  Options.Po  PDBReader.Po  PNGFile.Po  Polymer.Po  RefinementGridSearch.Po  RefinementNelderMead.Po  RefinementSnake.Po  RefinementStepSearch.Po  RefinementStrategy.Po  Sampler.Po  Sandbox.Po  Shouter.Po  Sidechain.Po  TextManager.Po  fftw3d.Po  main.Po  mat3x3.Po  mat4x4.Po  (+2 more)
libsrc/.libs/: vagabond
lysozyme_type/: main.cpp
shell_scale/: .vimrc  main.cpp
snap/: snapcraft.yaml
subprojects/: helencore.wrap
(+248 files in other folders)
