ACLOCAL_AMFLAGS = -I m4
AM_CFLAGS = --std=c++11 -O3
AM_LDFLAGS =

lib_LTLIBRARIES = ../libs/libccp4c.la

___libs_libccp4c_la_SOURCES = ccp4_array.c cmap_data.c cmtzlib.c ccp4_general.c \
cmap_header.c csymlib.c ccp4_parser.c cmap_labels.c \
cvecmat.c ccp4_program.c cmap_open.c library_err.c \
ccp4_unitcell.c cmap_skew.c library_file.c \
cmap_accessor.c cmap_stats.c library_utils.c cmap_close.c \
cmap_symop.c pack_c.c




