ACLOCAL_AMFLAGS = -I m4
AM_CXXFLAGS = --std=c++0x -O3 -I../ -L../libs/.libs/ -L../libfftw/ -lccp4c -lpng -lica -lfftw3f -lvbondinfo

bin_PROGRAMS = vagabond
vagabond_SOURCES = main.cpp       Absolute.cpp         Element.cpp     PNGFile.cpp \
Anchor.cpp           fftw3d.cpp      Polymer.cpp \
Anisotropicator.cpp  FileReader.cpp  RefinementGridSearch.cpp \
Atom.cpp             Kabsch.cpp      RefinementNelderMead.cpp \
AtomGroup.cpp        Knotter.cpp     RefinementSnake.cpp \
Backbone.cpp         LocalCC.cpp     RefinementStepSearch.cpp \
Bond.cpp             mat3x3.cpp      RefinementStrategy.cpp \
Bucket.cpp           mat4x4.cpp      Sampler.cpp \
BucketUniform.cpp    maths.cpp       Sandbox.cpp \
Crystal.cpp          Model.cpp       Shouter.cpp \
CSV.cpp              Molecule.cpp    Sidechain.cpp \
Diffraction.cpp      Monomer.cpp     TextManager.cpp \
DiffractionMTZ.cpp   Options.cpp     vec3.cpp \
Distributor.cpp      PDBReader.cpp   FlexRegion.cpp \
FlexGlobal.cpp






