ACLOCAL_AMFLAGS = -I m4
AM_CXXFLAGS = --std=c++0x -O3 -I../ -L../libs/.libs/ -L../libfftw/ -lccp4c -lpng -lica -lfftw3f -lvbondinfo

bin_PROGRAMS = vagabond
vagabond_SOURCES = Element.cpp \
Sampler.cpp \
RefinementStrategy.cpp \
BucketBulkSolvent.cpp \
VScope.cpp \
Sidechain.cpp \
mat4x4.cpp \
Kabsch.cpp \
Bucket.cpp \
RefinementGridSearch.cpp \
Bond.cpp \
SSRigger.cpp \
RefinementNelderMead.cpp \
FileReader.cpp \
RefinementStepSearch.cpp \
StateValue.cpp \
Knotter.cpp \
Crystal.cpp \
PDBReader.cpp \
mat3x3.cpp \
DiffractionMTZ.cpp \
Anisotropicator.cpp \
fftw3d.cpp \
Distributor.cpp \
TextManager.cpp \
Options.cpp \
Model.cpp \
Molecule.cpp \
Sandbox.cpp \
AtomGroup.cpp \
LocalCC.cpp \
Hydrogenator.cpp \
Parser.cpp \
VBondReader.cpp \
CSV.cpp \
Shouter.cpp \
maths.cpp \
main.cpp \
VScript.cpp \
vec3.cpp \
Monomer.cpp \
BoneDensity.cpp \
Timer.cpp \
Polymer.cpp \
Diffraction.cpp \
FlexGlobal.cpp \
Backbone.cpp \
Absolute.cpp \
Atom.cpp \
Thing.cpp \
LeftThing.cpp \
PNGFile.cpp \
Node.cpp
